cluster-example-server/k8s-yml/ejb-slb-prometheus.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name:  ejblb-deploy
  labels:
    application: ejblb
spec:
  replicas: 1
  selector:
    matchLabels:
      application: ejblb
  template:
    metadata:
      labels:
        application: ejblb
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name:  ejblb
        image: 'ghcr.io/robert0714/cluster-example-server:latest'
        imagePullPolicy: Always
        ports: 
            - containerPort: 9990
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 7600
              protocol: TCP  
        resources:
          requests: 
            memory: 300Mi
            cpu: 200m
          limits: 
            memory: 700Mi
            cpu: 400m

---
apiVersion: v1
kind: Service
metadata:
  name: ejblb-service
spec:
  ports:
  - name: tcp-remote
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp-9990
    port: 9990
    protocol: TCP
    targetPort: 9990
  selector:  
    application: ejblb
  sessionAffinity: None
  type: ClusterIP
