cluster-example-server/k8s-yml/istio-adv.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: loadbalance-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 8080
      name: ejb-port
      protocol: TCP
    hosts:
    - 'ejb-istio-system.apps.ocp.iisi.test'  
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ejblb-vs 
spec:
  hosts:
    - ejblb-service
  tcp:
    - route:
        - destination:
            host: ejblb-service
            subset: v1
          weight: 20
        - destination:
            host: ejblb-service
            subset: v2
          weight: 20
        - destination:
            host: ejblb-service
            subset: v3
          weight: 20
        - destination:
            host: ejblb-service
            subset: v4
          weight: 20
        - destination:
            host: ejblb-service
            subset: v5
          weight: 20
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ejblb-dr
spec:
  host: ejblb-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
    - labels:
        version: v4
      name: v4
    - labels:
        version: v5
      name: v5
